# dynamodb-rust-sample

./: Cargo.toml  README.md
src/: util.rs
