[package]
name = "ddb-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
tokio = { version = "1.34.0", features = ["full"] }
lambda_runtime = "0.8.3"
serde_json = "1.0.108"
serde = "1.0.193"
aws_lambda_events = "0.12.1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
